# tx2tx

./: .gitignore  AGENTS.md  CODE_ANALYSIS.md  CONVERGENCE_LOG.md  CONVERGENCE_LOG_v2.md  Makefile  PLAN.md  PYTHON-STYLE-GUIDE.md  QUICKSTART.md  README.md  TESTING.md  TEST_COVERAGE_FINAL.md  TEST_REPORT.md  TEST_SUMMARY.md  config.yml  pyproject.toml  pytest.ini  requirements.txt  test_detailed.py  test_feasibility.py  test_mvp.sh  test_normalized_coords.py  test_phase7.py  test_results.txt  test_simple.py  test_with_client.py
.claude/: settings.local.json
docs/: REFACTOR_MAP.md  architecture-client.adoc  architecture-server.adoc  architecture.adoc  devstart.adoc  limitations.adoc  overview.adoc  problem.adoc  rewrite_baseline.adoc  rewrite_plan.adoc  rewrite_status.adoc
gnome-extension/tx2tx-pointer@tx2tx/: README.md  extension.js  metadata.json
gnome_extension/tx2tx-truth-bridge/: README.adoc  extension.js  metadata.json
src/tx2tx/: cli.py
tests/: README.md  config_multi.yml  conftest.py
tests/integration/: test_cursor_ops.py  test_detailed.py  test_multi_client.py  test_phase7.py  test_simple.py  test_with_client.py
tests/manual/: check_feasibility.py  debug_server.py  test_click_through.py  test_click_through_v2.py  test_click_through_v3.py  test_connect_fail.py  test_cursor_change.py  test_cursor_move.py  test_input_only_overlay.py  test_opacity_overlay.py  test_overlay_warp.py  test_raw_motion.py  test_shape_hole_punch.py  test_shape_mask_overlay.py  test_software_cursor.py  test_stipple_overlay.py  test_warp_minimal.py
tests/tools/: analyze.py
tests/unit/: test_cli.py  test_client_hints.py  test_client_runtime.py  test_config.py  test_pointer.py  test_protocol.py  test_server_handshake.py  test_settings.py  (+11 more)
tx2tx/: __init__.py  __main__.py  cli.py
(+57 files in other folders)
